# TradingSystem

./: .env.paper.local.example  .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: README.md  index.html
apps/operator-console/: README.md
docs/: README.md  current-state.md  documentation-freshness-contract.md  legacy-extraction-portal.html  legacy-inventory.md
docs/plans/: 2026-04-03-legacy-extraction-master-plan.md  2026-04-03-market-intelligence-master-plan.md
infra/docker/: README.md
infra/systemd/: new-trading-system-autonomous.service.example
infra/terraform/: README.md
loop-system/: README.md  audit.agent.md  completed-review.agent.md  decision-context.md  decision-oracle.agent.md  loop.py  orchestrator.agent.md  start.sh  swarm.py  todo.agent.md
schemas/: order-intent.schema.json  strategy-manifest.schema.json  trading-event.schema.json
scripts/: verify.sh
services/control-plane/: README.md
services/execution-engine/: README.md
services/market-data/: README.md
services/model-lab/: README.md
services/portfolio-ledger/: README.md
services/research-lab/: README.md
services/risk-engine/: README.md
services/strategy-runtime/: README.md
src/new_trading_system/: __init__.py  broker_sdk.py  cli.py  config.py  models.py  occ.py  strategy_sdk.py  time_utils.py
strategies/crypto-trading/: README.md
strategies/options-trading/: README.md
strategies/penny-trading/: README.md
tasks/: master-roadmap.md
tests/integration/: README.md  test_strategy_exit.py  test_worker_internal.py
(+28 files in other folders)
