[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "new-trading-system"
version = "0.1.0"
description = "Paper-first multi-strategy trading platform vertical slice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[project.scripts]
nts-worker = "new_trading_system.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

